--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h1>Botones</h1>
 
     <a href="index2.html" class="btn btn-primary">Ir a Index2</a>
-    <button type="button" class="btn btn-primary">Primary</button>
-    <button type="button" class="btn btn-secondary">Secondary</button>
+    <a href="index2 copy.html" class="btn btn-secondary">Ir a Index3</a>
+    
     <button type="button" class="btn btn-success">Success</button>
     <button type="button" class="btn btn-danger">Danger</button>
     <button type="button" class="btn btn-warning">Warning</button>
@@ -88,6 +88,7 @@
         </div>
       </div>
 
+      
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
